feat: Add put, dto and mapper. run succesfull without tests