@@ -6,6 +6,7 @@ import com.videogamemanager.videogamemanager.models.dto.GameDto;
 import com.videogamemanager.videogamemanager.repository.GameRepository;
 import com.videogamemanager.videogamemanager.services.GameService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -13,6 +14,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class GameServiceImpl implements GameService {
 
 
@@ -21,24 +23,21 @@ public class GameServiceImpl implements GameService {
 
     @Override
     public List<GameDto> getAllGames() {
-
+        log.info("Obteniendo todos los videojuegos");
         return repository.findAll().stream()
                 .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public GameDto saveGame(GameDto gameDto) {
-        if (gameDto == null || gameDto.getTitle() == null || gameDto.getTitle().isEmpty()) {
-            throw new InvalidGameException("El juego no puede venir vacío o sin título.");
-        }
-
+        log.info("Guardando nuevo videojuego: {}", gameDto.getTitle());
         return mapper.toDTO(repository.save(mapper.toEntity(gameDto)));
     }
 
     @Override
     public GameDto updateGame(String id, GameDto gameDto) {
-
+        log.info("Actualizando videojuego con id: {}", id);
         return repository.findById(id)
                 .map(existingGame -> {
                     mapper.updateEntityFromDto(gameDto, existingGame);
@@ -49,21 +48,24 @@ public class GameServiceImpl implements GameService {
 
     @Override
     public List<GameDto> findByGenre(String genre) {
+        log.info("Buscando videojuegos por género: {}", genre);
         return repository.findByGenreIgnoreCase(genre).stream()
                 .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     @Override
     public List<GameDto> findByTitle(String title) {
+        log.info("Buscando videojuegos por titulo: {}", title);
         return repository.findByTitleContainingIgnoreCase(title).stream()
                 .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void deleteGame(String id) {
+        log.info("Eliminando videojuego con id: {}", id);
         if (!repository.existsById(id)) {
             throw new InvalidGameException("No se encontró el juego con ID: " + id);
         }
